---------------------------------------------------------------------------------------------------
Version: 0.8.8
Date: 15. 05. 2018
  Added:
    - Added new Landfill tile that places as dirt which avoids an issue where robots would incorrectly use grass items from inventory instead of landfill when placing blueprints
  Changed:
    - Moved Refined concrete to Dectorio tab (thanks to Optera)
  Bugfixes:
    - Fixed an issue with Painted refined concrete tile borders
    - Fixed migration issue with Alien Biomes (thanks to Aidiakapi)
  Locales:
    - Updated Korean and Simplified Chinese translations
---------------------------------------------------------------------------------------------------
Version: 0.8.7
Date: 13. 03. 2018
  Added:
    - New Painted refined concrete tiles
    - Support for 'Alien Biomes' remove obsolete tiles setting
  Changed:
    - Updated grid concrete graphics to make the grid less intense (thanks to kirazy)
  Locales:
    - New Simplified Chinese translation (thanks to jessefjxm)
    - Updated German and Korean translations
---------------------------------------------------------------------------------------------------
Version: 0.8.6
Date: 15. 01. 2018
  Added:
    - New mod setting to toggle Waterfill items independently of Landscaping items
  Bugfixes:
    - Softer handling of Landfill prerequisites so that it is less likely to conflict with other mods
    - Fixed that Waterfill items weren't unlocked when Earthworks was researched while 'Alien Biomes' mod was installed
  Changed:
    - Updated to include support for 'Alien Biomes' mod version 3
    - Optimised graphics assets to drastically reduce the overall mod size (thanks to iamfactorio)
  Locales:
    - Added Russian translation (thanks to iamfactorio)
---------------------------------------------------------------------------------------------------
Version: 0.8.5
Date: 08. 01. 2018
  Bugfixes: